# intmax2

./: .lefthook.yml  .typos.toml  Cargo.toml  README.md  compose.yml  config.json
balance-prover/: Cargo.toml
balance-prover/src/: health_check.rs  lib.rs  main.rs
balance-prover/src/api/: api.rs  balance_prover.rs  error.rs  mod.rs
block-builder/: .env.example  .gitignore  Cargo.toml  README.md
block-builder/src/: lib.rs  main.rs
block-builder/src/api/: api.rs  block_builder.rs  builder_state.rs  error.rs  internal_state.rs  mod.rs  routes.rs  state.rs
block-builder/src/app/: block_builder.rs  block_post.rs  builder_state.rs  error.rs  fee.rs  jobs.rs  mod.rs  types.rs
cli/: .env.example  .gitignore  Cargo.toml  README.md
cli/scripts/: generate_batch_transfer.sh  transfers.sh
cli/src/: args.rs  cli.rs  env_var.rs  format.rs  lib.rs  main.rs  state_manager.rs
cli/src/cli/: backup.rs  claim.rs  client.rs  deposit.rs  error.rs  get.rs  history.rs  key_derivation.rs  mod.rs  send.rs  sync.rs  utils.rs  withdrawal.rs
client-sdk/: Cargo.toml
client-sdk/abi/: BlockBuilderRegistry.json  BlockBuilderReward.json  ERC1967Proxy.json  Liquidity.json  Rollup.json  TestERC1155.json  TestERC20.json  TestNFT.json  Withdrawal.json
client-sdk/src/: lib.rs
client-sdk/src/client/: backup.rs  balance_logic.rs  client.rs  config.rs  error.rs  fee.rs  fee_payment.rs  fee_proof.rs  history.rs  key_from_eth.rs  mod.rs  multisig.rs  receipt.rs  receive_validation.rs  sync.rs
client-sdk/src/external_api/: balance_prover.rs  block_builder.rs  indexer.rs  mod.rs  predicate.rs  private_zkp_server.rs  s3_store_vault.rs  store_vault_server.rs  validity_prover.rs  wallet_key_vault.rs  withdrawal_server.rs
client-sdk/src/utils/: circuit_verifiers.rs  logger.rs  mod.rs  signature.rs
core-sdk/: Cargo.toml  config.json
core-sdk/src/client/: account.rs  balance_logic.rs  client.rs  config.rs  error.rs  mod.rs  utils.rs
core-sdk/src/external_api/: mod.rs
core-sdk/src/utils/: circuit_verifiers.rs  mod.rs
core-sdk/tests/: e2e.rs
interfaces/: Cargo.toml
interfaces/src/api/: error.rs  mod.rs
interfaces/src/data/: common_tx_data.rs  compress.rs  data_type.rs  deposit_data.rs  encryption.rs  error.rs  generic_misc_data.rs  meta_data.rs  (+11 more)
job-servers/aggregator-prover/: .env.example  Cargo.toml  README.md
server-common/: Cargo.toml
server-common/src/: db.rs  env.rs  health_check.rs  lib.rs  logger.rs  parser.rs  tracer.rs
store-vault-server/: .env.example  .gitignore  Cargo.toml  README.md
store-vault-server/migrations/: 20241128171722_create_initial_tables.down.sql  20241128171722_create_initial_tables.up.sql  20250209134341_add_encrypted_misc.down.sql  20250209134341_add_encrypted_misc.up.sql  20250211033442_remove_timestamp_from_encrypteddata.down.sql  20250211033442_remove_timestamp_from_encrypteddata.up.sql  20250306102250_create_initial_tables.down.sql  20250306102250_create_initial_tables.up.sql  20250310045631_create_initial_tables.down.sql  20250427034315_create_snapshot_pending_upload.down.sql  20250427034315_create_snapshot_pending_upload.up.sql  20250523164136_initial.down.sql  20250523164136_initial.up.sql
store-vault-server/src/: lib.rs  main.rs
tests/: .env.example  Cargo.toml  README.md
tests/src/: bridge_loop.rs  config.rs  deposit.rs  lib.rs  main.rs  mining_loop.rs  send.rs  transfer_loop.rs  utils.rs  withdrawal.rs
tests/tests/: deploy_contracts.rs  load_test.rs  post_blocks.rs  store_vault_server.rs
validity-prover/: .env.example  Cargo.toml  README.md
validity-prover-worker/: .env.example  .gitignore  Cargo.toml
validity-prover-worker/logs/: validity-prover-worker.log.2025-01-18  validity-prover-worker.log.2025-01-19  validity-prover-worker.log.2025-01-20
validity-prover-worker/src/: lib.rs  main.rs
validity-prover/migrations/: 20241129021126_initial.down.sql  20241129021126_initial.up.sql  20250205032136_add_indexed_leaves.down.sql  20250205032136_add_indexed_leaves.up.sql  20250209032216_add_idx_prover_tasks_status.down.sql  20250209032216_add_idx_prover_tasks_status.up.sql  20250228130000_add_idx_tx_tree_roots_block_number.down.sql  20250228130000_add_idx_tx_tree_roots_block_number.up.sql  20250307095617_del_index_for_leaves.down.sql  20250307095617_del_index_for_leaves.up.sql  20250312133639_del_index_for_hash_nodes.down.sql  20250312133639_del_index_for_hash_nodes.up.sql  20250416132304_l1_deposits.down.sql  20250416132304_l1_deposits.up.sql  20250421150530_add_l1_deposits_metadata_and_settings.down.sql  20250421150530_add_l1_deposits_metadata_and_settings.up.sql  20250521081620_initial.down.sql  20250521081620_initial.up.sql  20250602024544_backup.down.sql  20250602024544_backup.up.sql
validity-prover/scripts/: backup.sql  pruning.sql
validity-prover/src/: lib.rs  main.rs
validity-prover/tests/: post_blocks.rs
wasm/: Cargo.toml  README.md
wasm/js-test/: .env.example  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
wasm/pkg/: intmax2_wasm_lib.d.ts  intmax2_wasm_lib.js  intmax2_wasm_lib_bg.wasm  intmax2_wasm_lib_bg.wasm.d.ts  package.json
wasm/src/: client.rs  convert.rs  data_types.rs  fee_payment.rs  history.rs  lib.rs  misc.rs  native.rs  utils.rs
wasm/tests/: common_tests.rs  lib_tests.rs  native_tests.rs  utils_tests.rs
withdrawal-server/: .env.example  Cargo.toml
withdrawal-server/examples/: save_proof.rs
withdrawal-server/migrations/: 20241129143059_initial.down.sql  20241129143059_initial.sql  20241129143059_initial.up.sql  20250209032446_add_idx_withdrawals_hash.down.sql  20250209032446_add_idx_withdrawals_hash.up.sql  20250214081245_add_used_payments.down.sql  20250214081245_add_used_payments.up.sql  20250309092609_create_initial_tables.down.sql  20250309092609_create_initial_tables.up.sql  20250501090900_add_l1_tx_hash.down.sql  20250501090900_add_l1_tx_hash.up.sql  20250515135804_add_submit_claim_tx_hash.down.sql  20250515135804_add_submit_claim_tx_hash.up.sql  20250523164255_initial.down.sql  20250523164255_initial.up.sql
withdrawal-server/src/: lib.rs  main.rs
(+628 files in other folders)
