[workspace]
members = [
    "cli",
    "client-sdk",
    "interfaces",
    "wasm",
    "balance-prover",
    "store-vault-server",
    "validity-prover",
    "block-builder",
    "withdrawal-server",
    "tests",
    "server-common",
]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2021"

[workspace.dependencies]
plonky2 = { git = "https://github.com/InternetMaximalism/polygon-plonky2.git", branch = "intmax2-dev" }
intmax2-zkp = { git = "https://github.com/InternetMaximalism/intmax2-zkp", branch = "cli" }
plonky2_bn254 = { git = "https://github.com/InternetMaximalism/plonky2_bn254" }
plonky2_keccak = { git = "https://github.com/InternetMaximalism/plonky2_keccak" }
# Only features sync,macros,io-util,rt,time are supported on wasm.
tokio = { version = "1", features = [
    "sync",
    "macros",
    "io-util",
    "rt",
    "time",
] }
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"] }
ethers = "2.0"
anyhow = "1.0.88"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "uuid",
] }
chrono = "0.4.38"
log = "0.4.22"
uuid = "1.11.0"
dotenv = "0.15.0"
envy = "0.4.2"
bincode = "1.3.3"
thiserror = "1.0.64"
hashbrown = "0.14.5"
actix-web = "4.9.0"
actix-cors = "0.7.0"
serde_qs = { version = "0.13.0", features = ["actix4"] }
env_logger = "0.11.5"
