[workspace]
members = [
    "cli",
    "client-sdk",
    "interfaces",
    "wasm",
    "balance-prover",
    "store-vault-server",
    "legacy-store-vault-server",
    "validity-prover",
    "block-builder",
    "withdrawal-server",
    "tests",
    "validity-prover-worker",
    "server-common",
    "common",
]
exclude = ["job-servers/aggregator-prover"]
resolver = "2"

[workspace.package]
version = "0.1.19"
edition = "2021"

[workspace.dependencies]
intmax2-zkp = { git = "https://github.com/InternetMaximalism/intmax2-zkp" }
plonky2 = { git = "https://github.com/InternetMaximalism/polygon-plonky2.git", branch = "intmax2-dev" }
plonky2_bn254 = { git = "https://github.com/InternetMaximalism/plonky2_bn254" }
plonky2_keccak = { git = "https://github.com/InternetMaximalism/plonky2_keccak" }
# Only features sync,macros,io-util,rt,time are supported on wasm.
tokio = { version = "1", features = [
    "io-util",
    "macros",
    "rt",
    "sync",
    "time",
] }
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.138"
serde = { version = "1.0.215", features = ["derive"] }
ethers = "2.0"
anyhow = "1.0.97"
sqlx = { version = "0.8.2", features = [
    "chrono",
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
    "bigdecimal",
] }
chrono = "0.4.40"
log = "0.4.26"
uuid = { version = "1.12.1", features = ["v4", "v7"] }
dotenv = "0.15.0"
envy = "0.4.2"
bincode = "1.3.3"
thiserror = "2.0.12"
hashbrown = "0.15.2"
actix-web = "4.10.2"
actix-cors = "0.7.0"
tracing-actix-web = "0.7"
serde_with = { version = "3.12.0", features = ["base64"] }
serde_qs = { version = "0.14.0", features = ["actix4"] }
env_logger = "0.11.8"
ark-ec = "0.4.2"
ark-bn254 = "0.4.0"
