[package]
name = "balance-prover"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
plonky2 = { workspace = true }
intmax2-zkp = { workspace = true }
intmax2-interfaces = { path = "../interfaces" }
server-common = { path = "../server-common" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
dotenv = { workspace = true }
envy = { workspace = true }
thiserror = { workspace = true }
hashbrown = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
tracing-actix-web = { workspace = true }
