[package]
name = "block-builder"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
plonky2 = { workspace = true }
plonky2_bn254 = { workspace = true }
intmax2-zkp = { workspace = true }
intmax2-client-sdk = { path = "../client-sdk" }
intmax2-interfaces = { path = "../interfaces" }
server-common = { path = "../server-common" }
tokio = { workspace = true }
reqwest = { workspace = true }
ethers = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
dotenv = { workspace = true }
envy = { workspace = true }
env_logger = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
tracing-actix-web = { workspace = true }
serde_qs = { workspace = true }
num-bigint = "0.4.6"
redis = { version = "0.23.0", features = ["tokio-comp", "connection-manager"] }
async-trait = "0.1.77"
