[package]
name = "intmax2-cli"
version.workspace = true
edition = "2021"

[dependencies]
plonky2 = { workspace = true }
intmax2-zkp = { workspace = true }
common = { path = "../common" }
intmax2-client-sdk = { path = "../client-sdk" }
intmax2-interfaces = { path = "../interfaces" }
tokio = { workspace = true, features = ["rt-multi-thread"] }
reqwest = { workspace = true }
ethers = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
clap = { version = "4.5.31", features = ["derive"] }
anyhow = "1.0.93"
num-bigint = "0.4.6"
rand = "0.8.5"
log = "0.4.26"
mockito = "1.6.1"
hex = "0.4.3"
envy = "0.4.2"
url = { version = "2.5.4", features = ["serde"] }
dotenv = "0.15.0"
thiserror = "2.0.3"
serde_qs = "0.13.0"
colored = "3.0.0"
csv = "1.3.1"
chrono.workspace = true
env_logger.workspace = true
