[package]
name = "intmax2-client-sdk"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bincode = "1.3.3"
plonky2 = { workspace = true }
plonky2_bn254 = { workspace = true }
plonky2_keccak = { workspace = true }
intmax2-zkp = { workspace = true }
intmax2-interfaces = { path = "../interfaces" }
tokio = { workspace = true }
reqwest = { workspace = true }
ethers = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true}
num-bigint = "0.4.6"
config = "0.15"
aes-gcm = "0.10"
sha3 = "0.10.0"
dialoguer = "0.11.0"
console = "0.15.10"
rand = "0.8.4"
simplelog = "0.12.2"
log = "0.4.26"
chrono = "0.4.40"
regex = "1.10.6"
dotenv = "0.15.0"
hex = "0.4.3"
thiserror = "2.0.12"
strum = "0.27.1"
strum_macros = "0.27.1"
rand_chacha = "0.9.0"
async-trait = "0.1.88"
base64 = "0.22.1"
env_logger = "0.11.8"
itertools = "0.14.0"
hashbrown = "0.15.2"
getrandom = { version = "0.2", features = ["js"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = "0.5.0"
num-traits = "0.2.19"
sha2 = "0.10.8"
serde_urlencoded = "0.7.1"
serde_qs = "0.14.0"
rsa = "0.9.8"
futures = "0.3.31"
csv = "1.3.1"
