[package]
name = "intmax2-client-sdk"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
plonky2 = { workspace = true }
plonky2_bn254 = { workspace = true }
plonky2_keccak = { workspace = true }
intmax2-zkp = { workspace = true }
intmax2-interfaces = { path = "../interfaces" }
common = { path = "../common" }
tokio = { workspace = true }
reqwest = { workspace = true }
alloy = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
tower = "0.5.2"
num-bigint = "0.4.6"
aes-gcm = "0.10"
rand = "0.8.4"
log = "0.4.27"
chrono = "0.4.40"
regex = "1.10.6"
hex = "0.4.3"
thiserror = "2.0.12"
strum = "0.27.1"
strum_macros = "0.27.1"
rand_chacha = "0.9.0"
async-trait = "0.1.88"
base64 = "0.22.1"
itertools = "0.14.0"
hashbrown = "0.15.2"
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = "0.5.0"
num-traits = "0.2.19"
sha2 = "0.10.8"
serde_urlencoded = "0.7.1"
serde_qs = "0.15.0"
rsa = "0.9.8"
futures = "0.3.31"
csv = "1.3.1"
gloo-timers = { version = "0.3.0", features = ["futures"] }
