[package]
name = "intmax2-core-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
bincode = "1.3.3"
plonky2 = { git="https://github.com/InternetMaximalism/polygon-plonky2.git", branch="intmax2-dev"}
intmax2-zkp = {git ="https://github.com/InternetMaximalism/intmax2-zkp", branch = "cli"}
num-bigint = "0.4.6"
serde = {version="1.0.210", features = ["derive"]}
serde_json = "1.0.128"
config = "0.13"
ethers = "2.0"
# Only features sync,macros,io-util,rt,time are supported on wasm.
tokio = { version = "1", features = ["sync", "macros", "io-util", "rt", "time"] }
aes-gcm = "0.9"
sha3 = "0.10.0"
dialoguer = "0.11.0"
console = "0.15.8"
rand = "0.8.4"
simplelog = "0.12.2"
log = "0.4.22"
chrono = "0.4.38"
regex = "1.10.6"
clap = { version = "4.5.18", features = ["derive"] }
dotenv = "0.15.0"
hex = "0.4.3"
thiserror = "1.0.64"
strum = "0.26.3"
strum_macros = "0.26.4"
rand_chacha = "0.3.1"
async-trait = "0.1.83"
base64 = "0.22.1"
env_logger = "0.11.5"
itertools = "0.13.0"
hashbrown = "0.14.5"
reqwest-wasm ={version= "0.11.16", features = ["json"] }
getrandom = { version = "0.2", features = ["js"]}
gloo-timers = { version = "0.3.0", features = ["futures"] }
ark-bn254 = "0.4.0"
ark-ff = "0.4.2"
num-traits = "0.2.19"
sha2 = "0.10.8"
