[package]
name = "intmax2-interfaces"
version.workspace = true
edition = "2021"

[dependencies]
plonky2 = { workspace = true }
plonky2_bn254 = { workspace = true }
plonky2_keccak = { workspace = true }
intmax2-zkp = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
anyhow = "1.0.97"
bincode = "1.3.3"
hashbrown = "0.15.2"
async-trait = "0.1.86"
thiserror = "2.0.12"
ark-ec = { workspace = true }
ark-bn254 = { workspace = true }
rand = "0.8.5"
num-traits = "0.2.19"
concat-kdf = "0.1.0"
sha2 = "0.10.8"
ark-ff = "0.5.0"
hmac = "0.12.1"
alloy-primitives = { version = "0.8.22", features = ["rand"] }
aes = "0.8.4"
ctr = "0.9.2"
ark-std = "0.5.0"
serde_bytes = "0.11.15"
serde_with = { version = "3.12.0", features = ["base64"] }
chrono.workspace = true
log = { version = "0.4.14", default-features = false }                                                  # log 0.4.26 is required for plonky2
plonky2_u32 = { git = "https://github.com/InternetMaximalism/plonky2-u32.git", branch = "intmax2-dev" }
aes-gcm = "0.10.3"
rsa = "0.9.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
