[package]
name = "intmax2-interfaces"
version.workspace = true
edition = "2021"

[dependencies]
plonky2 = { workspace = true }
plonky2_u32 = { workspace = true }
plonky2_bn254 = { workspace = true }
plonky2_keccak = { workspace = true }
intmax2-zkp = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
alloy = { workspace = true }
bincode = { workspace = true }
ark-ec = { workspace = true }
ark-bn254 = { workspace = true }
thiserror = { workspace = true }
serde_with = { workspace = true }
chrono = { workspace = true }
anyhow = "1.0.98"
hashbrown = "0.15.2"
async-trait = "0.1.88"
rand = "0.8.5"
num-traits = "0.2.19"
concat-kdf = "0.1.0"
sha2 = "0.10.8"
ark-ff = "0.5.0"
hmac = "0.12.1"
aes = "0.8.4"
ctr = "0.9.2"
ark-std = "0.5.0"
log = { version = "0.4.27", default-features = false }
aes-gcm = "0.10.3"
rsa = "0.9.8"
ark-serialize = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
