[package]
name = "server-common"
version.workspace = true
edition = "2021"


[dependencies]
common = { path = "../common" }
actix-web = { workspace = true }
dotenvy = { workspace = true }
envy = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
futures-core = "0.3"
opentelemetry = { version = "0.27", default-features = false, features = [
    "trace",
] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.30"
tracing = "0.1.41"
tracing-actix-web = { workspace = true }
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
redis = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
url = "2.5.4"
