[package]
name = "store-vault-server"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
plonky2 = { workspace = true }
plonky2_keccak = { workspace = true }
plonky2_bn254 = { workspace = true }
intmax2-zkp = { workspace = true }
intmax2-client-sdk = { path = "../client-sdk" }
intmax2-interfaces = { path = "../interfaces" }
server-common = { path = "../server-common" }
tokio = { workspace = true }
reqwest = { workspace = true }
ethers = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
dotenv = { workspace = true }
envy = { workspace = true }
env_logger = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
hashbrown = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
serde_qs = { workspace = true }
ark-ec = "0.4.2"
ark-bn254 = "0.4.0"
rand = "0.8.5"
num-traits = "0.2.19"
