[package]
name = "store-vault-server"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
plonky2 = { workspace = true }
plonky2_keccak = { workspace = true }
plonky2_bn254 = { workspace = true }
intmax2-zkp = { workspace = true }
intmax2-interfaces = { path = "../interfaces" }
server-common = { path = "../server-common" }
tokio = { workspace = true }
reqwest = { workspace = true }
ethers = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
dotenv = { workspace = true }
envy = { workspace = true }
env_logger = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
hashbrown = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
serde_qs = { workspace = true }
tracing-actix-web = { workspace = true }
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
cloudfront_sign = "0.1.0"
base64 = "0.22.1"
mockall = "0.13.1"
