[package]
name = "tests"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
plonky2 = { workspace = true }
intmax2-zkp = { workspace = true }
intmax2-client-sdk = { path = "../client-sdk" }
intmax2-interfaces = { path = "../interfaces" }
tokio = { workspace = true }
reqwest = { workspace = true }
alloy = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = "2.0.12"
hashbrown = "0.15.2"
log = "0.4.27"
rand = "0.8.5"
envy = "0.4.2"
dotenv = "0.15.0"
num-bigint = "0.4.6"
env_logger.workspace = true
futures = "0.3.31"
