[package]
name = "validity-prover-worker"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
plonky2 = { workspace = true }
intmax2-zkp = { workspace = true }
intmax2-client-sdk = { path = "../client-sdk" }
intmax2-interfaces = { path = "../interfaces" }
server-common = { path = "../server-common" }
tokio = { version = "1", features = ["full"] }
reqwest = { workspace = true }
ethers = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
dotenv = { workspace = true }
envy = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
hashbrown = { workspace = true }
actix-web = { workspace = true }
actix-cors = { workspace = true }
serde_qs = { workspace = true }
rand = "0.8.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
async-trait = "0.1.83"
