[package]
name = "intmax2-wasm-lib"
version.workspace = true
edition = "2021"

[dependencies]
plonky2 = { workspace = true }
intmax2-zkp = { workspace = true }
intmax2-client-sdk = { path = "../client-sdk" }
intmax2-interfaces = { path = "../interfaces" }
reqwest = { workspace = true }
alloy = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
bincode = { workspace = true }
anyhow = "1.0.98"
num-bigint = "0.4.6"
rand = "0.8.5"
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = { version = "0.2.99", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
hex = "0.4.3"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"


[lib]
crate-type = ["cdylib", "rlib"]
