[package]
name = "intmax2-wasm-lib"
version.workspace = true
edition = "2021"

[dependencies]
alloy = { workspace = true }
bincode = { workspace = true }
log = { workspace = true }
intmax2-zkp = { workspace = true }
intmax2-client-sdk = { path = "../client-sdk" }
intmax2-interfaces = { path = "../interfaces" }
plonky2 = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
anyhow = "1.0.98"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.3", features = ["wasm_js"] }
hashbrown = "0.15.2"
hex = "0.4.3"
num-bigint = "0.4.6"
rand = "0.8.5"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { version = "0.2.99", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
