[package]
name = "withdrawal-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow ={workspace = true} 
bincode = "1.3.3"
plonky2 = {workspace = true} 
intmax2-zkp = {workspace = true}
intmax2-client-sdk = {path="../client-sdk"}
intmax2-interfaces = {path="../interfaces"}
tokio = { workspace = true }
reqwest = { workspace = true}
ethers = {workspace = true}
serde_json ={workspace = true}
serde = { workspace = true}
thiserror = "1.0.64"
actix-web = "4.9.0"
actix-cors = "0.7.0"
chrono = "0.4.38"
log = "0.4.22"
uuid = "1.11.0"
hashbrown = "0.14.5"
dotenv = "0.15.0"