[package]
name = "aggregator-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
intmax2-interfaces = { path = "../../interfaces" }
intmax2-zkp = { git = "https://github.com/InternetMaximalism/intmax2-zkp" }
plonky2 = { git = "https://github.com/InternetMaximalism/polygon-plonky2.git", branch = "intmax2-dev" }
actix = "0.13"
actix-web = "4.4"
serde = "1.0.188"
serde_json = "1.0.105"
actix-rt = "2.9.0"
config = "0.13.3"
dotenv = "0.15.0"
once_cell = "1.18.0"
actix-web-validator = "5.0.1"
rand = "0.8.5"
serde_qs = "0.13.0"
base64 = "0.22.1"
tokio = "1.39.2"
hex = "0.4.3"
anyhow = "1.0.86"
log = "0.4.22"
env_logger = "0.11.5"
serde_with = { version = "3.12.0", features = ["base64"] }
bincode = "1.3.3"
validator = { version = "0.16.1", features = ["derive"] }
redis = { version = "0.24", default-features = false, features = [
    "tokio-comp",
    "connection-manager",
] }

[features]
default = []
